kubeyaml/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-a-deployment
spec:
  selector:
    app: web-service-a
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-a
spec:
  selector:
    matchLabels:
      app: web-service-a
  template:
    metadata:
      labels:
        app: web-service-a
    spec:
      containers:
      - name: web-service-a
        image: buzandanms/web-service-a:4.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
