kubeyaml/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-b-deployment
spec:
  selector:
    app: web-service-b
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-b
spec:
  selector:
    matchLabels:
      app: web-service-b
  template:
    metadata:
      labels:
        app: web-service-b
    spec:
      containers:
      - name: web-service-b
        image: buzandanms/webserviceb
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
