kubeyaml/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  
  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /a

        pathType: Prefix

        backend:

          service:

            name: web-service-a-deployment

            port:

              number: 80
      - path: /b

        pathType: Prefix

        backend:

          service:

            name: web-service-b-deployment

            port:

              number: 80
