kubeyaml/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-nginx-ingress-web-service-a
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
        app: web-service-a  
      
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-nginx-ingress-web-service-b
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
        app: web-service-b
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress
